Fixed the problem with content overflowing the modal.

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -182,6 +182,20 @@ hr {
     border-radius: 10px;
     display: none;
     align-items: center;
+    max-height: 90vh;
+    overflow-y: scroll;
+    flex-direction: column;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.modal::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.modal {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .modal-content {
@@ -207,7 +221,6 @@ hr {
     justify-content: space-between;
     vertical-align: middle;
     padding: 0px 30px;
-
 }
 
 .modal_content p{
